# ai-recipes

./: .gitignore  README.md  justfile  pyproject.toml  pytest.ini
ai-recipes-llm/: main.py  pyproject.toml
ai-recipes-llm/src/ai/recipes/llm/: __init__.py
prompt/: pyproject.toml
prompt/ambiguity-clarity/: README.md  demo_langchain_costs.py  demo_real_costs.py  example_pricing.py  pyproject.toml  pytest.ini  test_pricing.py
prompt/ambiguity-clarity/docs/: API.md  USAGE.md
prompt/ambiguity-clarity/src/ambiguity_clarity/: __init__.py
prompt/ambiguity-clarity/src/ambiguity_clarity/callbacks/: __init__.py  cost_tracking_callback.py
prompt/ambiguity-clarity/src/ambiguity_clarity/openai_costs/: __init__.py  langchain_integration.py  pricing.py  telemetry_patch.py
prompt/ambiguity-clarity/tests/: conftest.py  cost_conftest.py  test_ambiguity_clarity.py  test_cost_tracking.py  test_env_handling.py
